better render on mobile, fix z-index

--- a/public/css/gographs.css
+++ b/public/css/gographs.css
@@ -1,11 +1,19 @@
+html, body {
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 body {
   font-family: Roboto, Arial, sans-serif;
   color: #555;
   margin: 0;
+  z-index: -2;
+  overscroll-behavior: none;
 }
 
 .floating-panel {
-  z-index: 0;
   position: absolute;
   margin: 12px;
   left: 0;
@@ -39,7 +47,6 @@ body {
 }
 
 #scope-container {
-  z-index: 1;
   border: 2px solid #000;
   box-shadow: unset;
 }
@@ -94,7 +101,6 @@ body {
   opacity: 0;
   width: inherit;
   transition: opacity 250ms linear;
-  z-index: -1;
 }
 
 #input-error.visible {
@@ -127,7 +133,6 @@ body {
   box-sizing: border-box;
   cursor: pointer;
   position: absolute;
-  z-index: 1;
   top: 26px;
   left: 530px;
   height: 22px;
@@ -232,7 +237,7 @@ body {
  */
 
  #spinner {
-  z-index: 2;
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
